--- a/MyLibrary.Entities/MyLibrary.Entities.csproj
+++ b/MyLibrary.Entities/MyLibrary.Entities.csproj
@@ -36,17 +36,21 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Abstract\IEntity.cs" />
     <Compile Include="Concrete\Author.cs" />
     <Compile Include="Concrete\Book.cs" />
     <Compile Include="Concrete\Category.cs" />
     <Compile Include="Concrete\Publisher.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <ProjectReference Include="..\MyLibrary.Core\MyLibrary.Core.csproj">
+      <Project>{225fad4c-6df6-42b7-8dd8-58ae5053c12e}</Project>
+      <Name>MyLibrary.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
