--- a/MyLibrary/packages.config
+++ b/MyLibrary/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.0.2" targetFramework="net461" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net461" />
+  <package id="FluentValidation" version="8.6.2" targetFramework="net461" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
+  <package id="PostSharp.Redist" version="6.6.7" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net461" />
 </packages>
